# cryptonaut

./: .gitignore  CREDENTIALS.md  README.md  plan.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cdk/: cdk.json  eslint.config.js  package-lock.json  package.json  test-lint.ts  tsconfig.json
cdk/cdk.out/: CdkStack.assets.json  CdkStack.template.json  CryptonautStack.assets.json  CryptonautStack.template.json  manifest.json  tree.json
cdk/lib/: cdk-stack.ts  index.ts
cdk/lib/constructs/: app-config.ts  app-secrets.ts  audit-table.ts
cdk/lib/stacks/: cryptonaut-stack.ts  telegram-stack.ts
cdk/test/stacks/: cryptonaut-stack.test.ts  telegram-stack.test.ts
lambdas/: pyproject.toml
lambdas/lambda1/: handler.py
lambdas/lambda2/: handler.py
lambdas/notifier/: main.py
lambdas/orchestrator/: main.py
lambdas/portfolio/: main.py
lambdas/shared/: utils.py
lambdas/tests/: test_lambda1.py  test_lambda2.py  test_shared.py
lambdas/webhook/: main.py
