[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptonaut_lambdas"
version = "0.1.0"
description = "Lambda functions for Cryptonaut"
dependencies = [
    "boto3",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "boto3-stubs",
    "types-requests"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
